fixed spacing issue with player boxes

--- a/client/style.less
+++ b/client/style.less
@@ -129,6 +129,7 @@ body {
 		.row {
 			margin-bottom: 15px;
 			margin-left: 60px;
+			font-size: 0;
 
 			&:last-child {
 				margin-bottom: 0;
@@ -144,6 +145,7 @@ body {
 				display: inline-block;
 				border-radius: 5px;
 				margin-bottom: 8px;
+				font-size: 1rem;
 
 				&.out {
 					opacity: 0.35;
